src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: dockerconfigjson
      containers:
      - name: events-service
        image: ghcr.io/samoiloff90/architecture-pro-cinemaabyss/events-service:cinema
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
  labels:
    app: events-service
spec:
  type: ClusterIP
  selector:
    app: events-service
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
