src/kubernetes/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monolith
  template:
    metadata:
      labels:
        app: monolith
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: monolith
        image: ghcr.io/samoiloff90/architecture-pro-cinemaabyss/monolith:cinema
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: monolith
  ports:
  - port: 8080
    targetPort: 8080
