src/kubernetes/movies-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movies-service
  template:
    metadata:
      labels:
        app: movies-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: movies-service
        image: ghcr.io/samoiloff90/architecture-pro-cinemaabyss/movies-service:cinema
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: movies-service
  ports:
  - port: 8081
    targetPort: 8081
